Update Cross-validation & Bootstrap.ipynb
updated practice in Bootstrap(not done)

--- a/CrossValidation&Bootstrap/Cross-validation & Bootstrap.ipynb
+++ b/CrossValidation&Bootstrap/Cross-validation & Bootstrap.ipynb
@@ -567,7 +567,9 @@
    "id": "e76cefe9-6808-4c5b-bbcc-4f53418f8cff",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hp_func = partial(bootOLS, MS(['horsepower']), 'mpg')"
+   ]
   }
  ],
  "metadata": {
