renamed folder name

--- a/Cross-Validation & Bootstrap/Cross-validation & Bootstrap.ipynb
+++ b/Cross-Validation & Bootstrap/Cross-validation & Bootstrap.ipynb
@@ -563,13 +563,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "e76cefe9-6808-4c5b-bbcc-4f53418f8cff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp_func = partial(bootOLS, MS(['horsepower']), 'mpg')"
+    "hp_func = partial(boot_OLS, MS(['horsepower']), 'mpg')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7f95b935-9bc3-4fed-a19f-1d9aca9c04df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[39.88064456, -0.1567849 ],\n",
+       "       [38.73298691, -0.14699495],\n",
+       "       [38.31734657, -0.14442683],\n",
+       "       [39.91446826, -0.15782234],\n",
+       "       [39.43349349, -0.15072702],\n",
+       "       [40.36629857, -0.15912217],\n",
+       "       [39.62334517, -0.15449117],\n",
+       "       [39.0580588 , -0.14952908],\n",
+       "       [38.66688437, -0.14521037],\n",
+       "       [39.64280792, -0.15555698]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng = np.random.default_rng(0)\n",
+    "np.array([hp_func(Auto, rng.choice(392,392, replace = True)) for _ in range(10)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "368860f5-9f31-4c95-80a4-8c0c0bb61b3a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
